spec/.test/config/invalid/isect/tags/extensions.php
<?php

return [
    'extensions' => [
        'id' => function () {},
    ],
    'tags' => [
        'id' => [
            'id1' => [],
        ],
    ],
];
